--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "start": "npm run sass",
         "sass": "sass ./themes/",
-        "watch": "sass ./themes/ --watch"
+        "watch": "sass ./themes/ --watch",
+        "compressed": "sass ./themes/ -s compressed"
     },
     "repository": {
         "type": "git",
